// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sales channels GET /admin/sales-channels/:id should retrieve the requested sales channel 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test description",
  "id": Any<String>,
  "is_disabled": false,
  "name": "test name",
  "updated_at": Any<String>,
}
`;

exports[`sales channels POST /admin/sales-channels/:id updates sales channel properties 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "updated description",
  "id": Any<String>,
  "is_disabled": true,
  "name": "updated name",
  "updated_at": Any<String>,
}
`;
